feat(desktop-ui): first-class attach refusals in the attach form
The attach form no longer buries a failed attach in the log. Two read-only
guardrails, both Swing-free and tested without a live JVM (AttachDiagnostics):

- a Linux /proc/<pid>/cmdline pre-scan blocks Run before launch when the
  target's argv carries -XX:+DisableAttachMechanism (attach-disabled) or
  -XX:-EnableDynamicAgentLoading (dynamic-agent-disabled);
- a parser reads the CLI's 'attach failed (reason=<code>): ...' line when
  present and maps the code (attach-disabled, dynamic-agent-disabled,
  cross-user, not-a-jvm, agent-onattach-missing, agent-init-failed,
  jcmd-false-success, unknown) to a banner with the code, a one-line meaning,
  and the one honest remedy: use startup -agentpath / recover.

jdk.attach.allowAttachSelf=false is intentionally not a refusal (self-attach
only); it warns and proceeds. On any refusal or non-zero exit the viewer never
tails and never claims it attached. This branch parses the CLI's reason code;
it does not re-implement the CLI's classifier in Kotlin.

Co-authored-by: Gao Yu <gaoyu06@users.noreply.github.com>