@@ -148,6 +148,70 @@ data class NextCommand(
 )
 
 /**
+ * A stable reason code for a live attach that will not — or did not — happen.
+ * The codes mirror the ones the `attach` CLI prints
+ * (`attach failed (reason=<code>): …`); the one-line [meaning] is the viewer's
+ * own concise gloss, not the CLI's message text. The honest remedy is the
+ * same for every case: restart the target under startup instrumentation.
+ */
+enum class AttachRefusalCode(val code: String, val meaning: String) {
+    ATTACH_DISABLED(
+        "attach-disabled",
+        "the target's JVM attach handshake is off (-XX:+DisableAttachMechanism); no agent can be loaded",
+    ),
+    DYNAMIC_AGENT_DISABLED(
+        "dynamic-agent-disabled",
+        "the target forbids loading an agent into the live process (-XX:-EnableDynamicAgentLoading)",
+    ),
+    CROSS_USER(
+        "cross-user",
+        "the target is owned by another user; attach is same-user only",
+    ),
+    NOT_A_JVM(
+        "not-a-jvm",
+        "the target process does not look like a JVM",
+    ),
+    AGENT_ONATTACH_MISSING(
+        "agent-onattach-missing",
+        "the agent library does not export Agent_OnAttach, so it cannot load into a live VM",
+    ),
+    AGENT_INIT_FAILED(
+        "agent-init-failed",
+        "the agent loaded but Agent_OnAttach failed to initialize",
+    ),
+    JCMD_FALSE_SUCCESS(
+        "jcmd-false-success",
+        "jcmd exited 0 but the agent returned an error — this is a failure, not an attach",
+    ),
+    UNKNOWN(
+        "unknown",
+        "the attach failed for an unrecognized reason",
+    );
+
+    companion object {
+        /** Map a raw code string to a known code, defaulting to [UNKNOWN]. */
+        fun fromCode(raw: String): AttachRefusalCode =
+            entries.firstOrNull { it.code == raw } ?: UNKNOWN
+    }
+}
+
+/** Whether a refusal was found before launch (argv scan) or in the CLI output. */
+enum class RefusalSource { CMDLINE_SCAN, CLI_OUTPUT }
+
+/**
+ * A classified reason a live attach will not / did not happen. Surfaced as a
+ * first-class banner in the attach form rather than buried in the log. It never
+ * describes a bypass: reaching a refusal means the attach did not occur.
+ */
+data class AttachRefusal(
+    val code: AttachRefusalCode,
+    val source: RefusalSource,
+    /** The message text from the CLI, when parsed from output; blank for a
+     *  pre-launch argv scan (the code's [meaning] carries the explanation). */
+    val detail: String = "",
+)
+
+/**
  * The inputs a user fills in on the attach form. These map one-to-one to the
  * flags of the `attach` CLI subcommand; the GUI never invents its own attach
  * mechanism, it only assembles (and optionally runs) that command.
